--- a/main.html
+++ b/main.html
@@ -6,11 +6,22 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color: yellow; text-align: center;">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<!-- First Div: Flowers Photos -->
+    <div style="margin-top: 20px;">
+        <h1 id="f1" style="color: green;">Flowers photos</h1>
+        <p style="font-style: italic;">Beautiful flowers adorn our world with vibrant colors and enchanting fragrances.</p>
+    </div>
+
+    <!-- Second Div: Roses Pictures -->
+    <div style="margin-top: 50px;">
+        <h1 id="f2" style="color: red;">Roses pictures</h1>
+        <p style="font-style: italic;">Roses, the symbol of love and beauty, come in various hues and sizes, each carrying its own significance.</p>
+    </div>
 </body>
 
 </html>
